--- a/src/pages/UserPreviouslyContacted.module.css
+++ b/src/pages/UserPreviouslyContacted.module.css
@@ -1,13 +1,10 @@
 .image6Icon {
-  height: 448px;
+  height: 30vh;
   flex: 1;
   position: relative;
-  max-width: 100%;
-  overflow: hidden;
-  object-fit: cover;
 }
 .emptyState {
-  width: 484px;
+  width: 20vw;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -98,13 +95,13 @@
 .content,
 .sidebarParent {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   max-width: 100%;
 }
 .content {
   align-self: stretch;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   gap: var(--gap-32xl);
 }
 .contactImage,
@@ -115,7 +112,7 @@
   width: 518px;
   flex-direction: column;
   justify-content: flex-start;
-  padding: var(--padding-71xl) 0 0;
+  padding: 0 0 10%;
   min-width: 518px;
 }
 .sidebarParent {
@@ -123,7 +120,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 0 var(--padding-xl) 0 0;
-  gap: var(--gap-xl);
+  gap: 45%;
   text-align: center;
   font-size: var(--font-size-xl);
   color: var(--color-black);
